--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -37,4 +37,4 @@ exclude = '''
 --max-line-length=79
 
 [tool.pylint."messages control"]
-disable = ["no-value-for-parameter","line-too-long", "missing-module-docstring", "missing-class-docstring", "missing-function-docstring", "import-error", "no-name-in-module", "too-few-public-methods", "duplicate-code"]
+disable = ["try-except-raise","no-value-for-parameter","line-too-long", "missing-module-docstring", "missing-class-docstring", "missing-function-docstring", "import-error", "no-name-in-module", "too-few-public-methods", "duplicate-code"]
