--- a/app/.pre-commit-config.yaml
+++ b/app/.pre-commit-config.yaml
@@ -21,16 +21,16 @@ repos:
     hooks:
       - id: flake8
         args: [--max-line-length=79, --ignore=E501 W503]
-  - repo: https://github.com/pycqa/pylint
-    rev: "v2.17.0"
-    hooks:
-      - id: pylint
-        args: ["-sn", "--rcfile=pyproject.toml", --disable=W0511]
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.1.1
-    hooks:
-      - id: mypy
-        args: ["-v"]
-        additional_dependencies: [requests==2.28.2]
+  # - repo: https://github.com/pycqa/pylint
+  #   rev: "v2.17.0"
+  #   hooks:
+  #     - id: pylint
+  #       args: ["-sn", "--rcfile=.pyproject.toml", --disable=W0511]
+  # - repo: https://github.com/pre-commit/mirrors-mypy
+  #   rev: v1.1.1
+  # hooks:
+  #   - id: mypy
+  #     args: ["-v"]
+  #     additional_dependencies: [requests==2.28.2]
 default_language_version:
   python: python3.11.1
