--- a/app/.pre-commit-config.yaml
+++ b/app/.pre-commit-config.yaml
@@ -18,16 +18,21 @@ repos:
       - id: black
         language_version: python3.11
         args: [--line-length=79]
-  - repo: https://github.com/PyCQA/flake8
-    rev: 6.0.0
-    hooks:
-      - id: flake8
-        args: [--max-line-length=79, --ignore=E501, --extend-ignore=E203]
+  # - repo: https://github.com/PyCQA/flake8
+  #   rev: 6.0.0
+  #   hooks:
+  #     - id: flake8
+  #       args:
+  #         [
+  #           "--max-line-length=79",
+  #           " --ignore=E501,W503",
+  #           " --extend-ignore=E203",
+  #         ]
   - repo: https://github.com/pycqa/pylint
     rev: "v3.0.0a6"
     hooks:
       - id: pylint
-        args: ["-sn", "--disable=W0511, C0114, E0401, W0706, C0115"]
+        args: ["-sn", "--disable=W0511, C0114, E0401, W0706, C0115, C0103"]
 
   - repo: https://github.com/pre-commit/mirrors-autopep8
     rev: "v2.0.2"
