--- a/app/.pre-commit-config.yaml
+++ b/app/.pre-commit-config.yaml
@@ -28,11 +28,11 @@ repos:
   #           " --ignore=E501,W503",
   #           " --extend-ignore=E203",
   #         ]
-  - repo: https://github.com/pycqa/pylint
-    rev: "v3.0.0a6"
-    hooks:
-      - id: pylint
-        args: ["-sn", "--disable=W0511, C0114, E0401, W0706, C0115, C0103"]
+  # - repo: https://github.com/pycqa/pylint
+  #   rev: "v3.0.0a6"
+  #   hooks:
+  #     - id: pylint
+  #       args: ["-sn", "--disable=W0511, C0114, E0401, W0706, C0115, C0103"]
 
   - repo: https://github.com/pre-commit/mirrors-autopep8
     rev: "v2.0.2"
