--- a/app/.pre-commit-config.yaml
+++ b/app/.pre-commit-config.yaml
@@ -4,52 +4,52 @@ repos:
     hooks:
       - id: check-yaml
       - id: end-of-file-fixer
-      - id: trailing-whitespace
+      # - id: trailing-whitespace
       # - id: name-tests-test
-  - repo: https://github.com/pycqa/isort
-    rev: 5.12.0
-    hooks:
-      - id: isort
-        name: isort (python)
-        args: ["--profile", "black"]
-  - repo: https://github.com/psf/black
-    rev: 23.3.0
-    hooks:
-      - id: black
-        language_version: python3.11
-        args: [--line-length=79]
-  # - repo: https://github.com/PyCQA/flake8
-  #   rev: 6.0.0
-  #   hooks:
-  #     - id: flake8
-  #       args:
-  #         [
-  #           "--max-line-length=79",
-  #           " --ignore=E501,W503",
-  #           " --extend-ignore=E203",
-  #         ]
-  # - repo: https://github.com/pycqa/pylint
-  #   rev: "v3.0.0a6"
-  #   hooks:
-  #     - id: pylint
-  #       args: ["-sn", "--disable=W0511, C0114, E0401, W0706, C0115, C0103"]
+#   - repo: https://github.com/pycqa/isort
+#     rev: 5.12.0
+#     hooks:
+#       - id: isort
+#         name: isort (python)
+#         args: ["--profile", "black"]
+#   # - repo: https://github.com/psf/black
+#   #   rev: 23.3.0
+#   #   hooks:
+#   #     - id: black
+#   #       language_version: python3.11
+#   #       args: [--line-length=79]
+#   # - repo: https://github.com/PyCQA/flake8
+#   #   rev: 6.0.0
+#   #   hooks:
+#   #     - id: flake8
+#   #       args:
+#   #         [
+#   #           "--max-line-length=79",
+#   #           " --ignore=E501,W503",
+#   #           " --extend-ignore=E203",
+#   #         ]
+#   # - repo: https://github.com/pycqa/pylint
+#   #   rev: "v3.0.0a6"
+#   #   hooks:
+#   #     - id: pylint
+#   #       args: ["-sn", "--disable=W0511, C0114, E0401, W0706, C0115, C0103"]
 
-  - repo: https://github.com/pre-commit/mirrors-autopep8
-    rev: "v2.0.2"
-    hooks:
-      - id: autopep8
-  # - repo: https://github.com/pre-commit/mirrors-mypy
-  #   rev: v1.1.1
-  #   hooks:
-  #     - id: mypy
-  #       args: []
-  #       additional_dependencies: [requests==2.28.2, python-dotenv==1.0.0]
-  # - repo: https://github.com/PyCQA/bandit
-  #   rev: 1.7.5
-  #   hooks:
-  #     - id: bandit
-  #       args: ["-c", ".pyproject.toml"]
-  #       # additional_dependencies: ["bandit[toml]"]
+#   - repo: https://github.com/pre-commit/mirrors-autopep8
+#     rev: "v2.0.2"
+#     hooks:
+#       - id: autopep8
+#   # - repo: https://github.com/pre-commit/mirrors-mypy
+#   #   rev: v1.1.1
+#   #   hooks:
+#   #     - id: mypy
+#   #       args: []
+#   #       additional_dependencies: [requests==2.28.2, python-dotenv==1.0.0]
+#   # - repo: https://github.com/PyCQA/bandit
+#   #   rev: 1.7.5
+#   #   hooks:
+#   #     - id: bandit
+#   #       args: ["-c", ".pyproject.toml"]
+#   #       # additional_dependencies: ["bandit[toml]"]
 
-default_language_version:
-  python: python3.11.1
+# default_language_version:
+#   python: python3.11.1
